--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="images"><p align="center">
-<a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/power-badminton.html" style="text-decoration: none;"><img src="images/games/power-badminton.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
