--- a/games/power-badminton.html
+++ b/games/power-badminton.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://html5.gamedistribution.com/ec111b02d2554b599732a2d0a96419e5/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamedistribution.com/ec111b02d2554b599732a2d0a96419e5/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/soccer-skills-2021.html" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
