--- a/dump/text.html
+++ b/dump/text.html
@@ -35,7 +35,7 @@ textarea:focus, input:focus {
     <ul id="myMenu">
         <li><b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br></li>
         <li><b><a href="/games/3kh0.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">3kh0 Unblocked</a><br></li>
-        <li><b><a href="/games/123-movies.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">123-Movies</a><br></li>
+        <li><b><a href="/games/123-movies.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">123-Movies (Movies, App)</a><br></li>
         <li><b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br></li>
         <li><b><a href="/games/btd4.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Balloons TD 4</a><br></li>
         <li><b><a href="/games/burrito-bison.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Burrito Bison</a><br></li>
@@ -90,7 +90,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/soccer-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Random</a><br></li>
         <li><b><a href="/games/soccer-skills.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Skills</a><br></li>
         <li><b><a href="/games/sort-the-court.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Sort The Court</a><br></li>
-        <li><b><a href="/games/spotify.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Spotify</a><br></li>
+        <li><b><a href="/games/spotify.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Spotify (Music, App)</a><br></li>
         <li><b><a href="/games/stick-merge.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stick Merge</a><br></li>
         <li><b><a href="/games/stickman-hook.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stickman Hook</a><br></li>
         <li><b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br></li>
