--- a/dump/text.html
+++ b/dump/text.html
@@ -101,6 +101,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/tubi.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tubi (Movies)</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
         <li><b><a href="/games/uv.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Ultraviolet</a><br></li>
+        <li><b><a href="/games/vumoo.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Vumoo (Movies)</a><br></li>
         <li><b><a href="/games/wheelie-cross.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Wheelie Cross</a><br></li>
     </ul>
 </div>
