--- a/games/123-movies.html
+++ b/games/123-movies.html
@@ -41,6 +41,6 @@ unblocked games!</p>
 
 <p align="center"><iframe src="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-wu8%2C0321mmvke%2Cngt-" id="iframe"></iframe></p>
 
-<p align="center"><a href="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-wu8%2C0321mmvke%2Cngt-"><button class="button button1">Open Page</button></p></a>
+<p align="center"><a href="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-wu8%2C0321mmvke%2Cngt-"><b><button class="button button1">Open Page</button></b></p></a>
 
 <script src="/js/test.js"></script>
